# karn

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  llms-full.txt  llms.txt  rust-toolchain.toml
bynk/: Cargo.toml  README.md
bynk-check/: Cargo.toml  README.md
bynk-check/src/: actors.rs  builtin_names.rs  checker.rs  expr_types.rs  firstparty.rs  hints.rs  index.rs  kernel_methods.rs  lib.rs  locals.rs  requirements.rs  resolver.rs
bynk-check/src/checker/: calls.rs  expressions.rs  kernels.rs  linearity.rs  refinements.rs
bynk-emit/: Cargo.toml  README.md
bynk-emit/runtime/: README.md  package-lock.json  package.json  tsconfig.json
bynk-emit/runtime/scripts/: bundle.mjs
bynk-emit/runtime/src/: agent.ts  auth.ts  boundary.ts  bytes.ts  connection.ts  errors.ts  http.ts  index.ts  queue.ts  result.ts  storage.ts
bynk-emit/runtime/test/: agent.test.ts  auth.test.ts  boundary.test.ts  bytes.test.ts  core.test.ts  http.test.ts
bynk-emit/src/: emitter.rs  lib.rs  project.rs
bynk-emit/src/emitter/: emit.rs  lower.rs  runtime.ts  serialisation.rs  source_map.rs  websocket.rs  workers.rs  workers_entry.rs  wrangler.rs
bynk-emit/src/project/: consistency.rs  diagnostics.rs  discovery.rs  graph.rs  paths.rs  symbols.rs  tests_emit.rs  validate.rs
bynk-fmt/: Cargo.toml  README.md
bynk-fmt/src/: fmt.rs  lib.rs
bynk-fmt/tests/: golden.rs  roundtrip.rs
bynk-grammar/: Cargo.toml  README.md
bynk-grammar/src/: lib.rs
bynk-ide/: Cargo.toml  README.md
bynk-ide/src/: lib.rs
bynk-lsp/: Cargo.toml  README.md
bynk-lsp/src/: code_actions.rs  completion.rs  document_symbols.rs  index_queries.rs  inlay_hints.rs  locals_nav.rs  main.rs  position.rs  project.rs  publish.rs  signature_help.rs  structure.rs  symbols.rs
bynk-lsp/tests/: code_actions.rs  interpolation_lsp.rs  legend_drift.rs  rename_validation.rs
bynk-render/: Cargo.toml  README.md
bynk-render/src/: lib.rs
bynk-strip/: Cargo.toml  README.md
bynk-strip/src/: lib.rs
bynk-syntax/: Cargo.toml  README.md
bynk-syntax/src/: ast.rs  diagnostics.rs  error.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  span.rs
bynk-syntax/src/parser/: declarations.rs  expressions.rs  statements.rs  types.rs
bynk-wasm/: Cargo.toml  README.md
bynk-wasm/src/: lib.rs
bynk/src/: cli.rs  compiler.rs  dev.rs  doctor.rs  lib.rs  main.rs  new.rs  probe.rs  report.rs
bynk/src/templates/: bynk.toml  gitignore  starter.bynk
bynk/tests/: dev.rs  doctor.rs  new.rs
bynk/tests/golden/: dev-preflight.txt  dev-select-errors.txt  doctor.json  doctor.short  new-errors.txt  new-next-steps.txt  new-scaffold.txt
bynkc/: Cargo.toml  README.md
bynkc/src/: actors.rs  ast.rs  checker.rs  cli.rs  emitter.rs  error.rs  expr_types.rs  firstparty.rs  fmt.rs  index.rs  kernel_methods.rs  keywords.rs  lexer.rs  lib.rs  locals.rs  main.rs  parser.rs  project.rs  resolver.rs  test_json.rs
bynkc/src/checker/: expressions.rs  refinements.rs
bynkc/src/emitter/: emit.rs  lower.rs  serialisation.rs  workers.rs  workers_entry.rs  wrangler.rs
bynkc/src/firstparty/: bynk.bynk  bynk.cloudflare.bynk  bynk.list.karn  bynk.map.karn  bynk.string.karn  karn.cloudflare.karn  karn.list.karn  karn.map.karn
bynkc/src/parser/: declarations.rs  expressions.rs  statements.rs  types.rs
bynkc/src/project/: consistency.rs  diagnostics.rs  discovery.rs  graph.rs  paths.rs  symbols.rs  tests_emit.rs  validate.rs
bynkc/tests/: bearer_auth.rs  by_on_agent.rs  call_hierarchy_index.rs  check_format_short.rs  cli_reference.rs  cli_rooting.rs  contract_behaviour.rs  cross_context_caller.rs  debug_inspect.rs  debug_metadata.rs  diagnose_project.rs  diagnostics_registry.rs  doc_diagnostics.rs  doc_examples.rs  duration.rs  e2e.rs  examples.rs  expr_types_capture.rs  field_op_index.rs  firstparty_sources.rs  float_codec_behaviour.rs  grammar_coverage.rs  grammar_reference.rs  implementation_index.rs  inlay_hints.rs  interpolation.rs  json_codec_behaviour.rs  kernel_registry.rs  keywords_reference.rs  kv_behaviour.rs  locals_capture.rs  method_index.rs  multi_actor_sum.rs  observation_behaviour.rs  property_behaviour.rs  reference_index.rs  refinement_auth.rs  requirements_ledger.rs  runtime_helpers.rs  semantic_tokens_index.rs  (+10 more)
bynkc/tests/golden/: test-json-compile.json  test-json-discovered.json  test-json-normal.json  test-json-runtime.json
karn/: Cargo.toml
karn-grammar/: Cargo.toml  README.md
karn-grammar/src/: lib.rs
karn-lsp/: Cargo.toml  README.md
karn-lsp/src/: code_actions.rs  completion.rs  document_symbols.rs  index_queries.rs  inlay_hints.rs  main.rs  position.rs  project.rs  publish.rs  signature_help.rs  structure.rs  symbols.rs
karn-lsp/tests/: code_actions.rs  interpolation_lsp.rs  legend_drift.rs  rename_validation.rs
karn/src/: cli.rs  compiler.rs  doctor.rs  lib.rs  main.rs  probe.rs  report.rs
karn/tests/: doctor.rs
karnc/: Cargo.toml  README.md
karnc/src/: actors.rs  ast.rs  builtin_names.rs  checker.rs  cli.rs  diagnostics.rs  emitter.rs  error.rs  firstparty.rs  fmt.rs  hints.rs  index.rs  kernel_methods.rs  keywords.rs  lexer.rs  lib.rs  locals.rs  main.rs  parser.rs  project.rs  resolver.rs  span.rs
karnc/src/emitter/: emit.rs  (+5 more)
karnc/tests/: bearer_auth.rs  call_hierarchy_index.rs  check_format_short.rs  cli_reference.rs  decisions_index.rs  diagnose_project.rs  diagnostics_registry.rs  doc_diagnostics.rs  doc_examples.rs  doc_version.rs  e2e.rs  examples.rs  expr_types_capture.rs  field_op_index.rs  firstparty_sources.rs  float_codec_behaviour.rs  grammar_reference.rs  implementation_index.rs  inlay_hints.rs  interpolation.rs  json_codec_behaviour.rs  keywords_reference.rs  kv_behaviour.rs  locals_capture.rs  method_index.rs  multi_actor_sum.rs  reference_index.rs  refinement_auth.rs  runtime_helpers.rs  semantic_tokens_index.rs  suggestions.rs  tsc_verify.rs
mdbook-bynk-grammar/: Cargo.toml
mdbook-bynk-grammar/src/: main.rs
mdbook-karn-grammar/: Cargo.toml
mdbook-karn-grammar/src/: main.rs
mdbook-karn-highlight/: Cargo.toml  build.rs
mdbook-karn-highlight/src/: main.rs
(+2723 files in other folders)
