[workspace]
members = [
    "karnc",
    "karn",
    "karn-fmt",
    "karn-grammar",
    "karn-lsp",
    "mdbook-karn-grammar",
    "mdbook-karn-highlight",
    "mdbook-karn-visuals",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.52.0"
# Minimum supported Rust version. Floored by edition 2024 (needs >= 1.85). The
# CI `msrv` leg builds the workspace on exactly this toolchain, so the claim is
# verified rather than asserted — if it fails, raise this (don't lower the leg).
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/accuser/karn"
homepage = "https://github.com/accuser/karn"

[workspace.dependencies]
# version is required alongside path so the published crates carry a crates.io
# dependency requirement; path is used for in-workspace builds.
karnc = { path = "karnc", version = "0.52.0" }
karn-fmt = { path = "karn-fmt", version = "0.52.0" }
karn-grammar = { path = "karn-grammar", version = "0.52.0" }
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
logos = "0.16"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
# Portable executable lookup (handles PATHEXT/`where` on Windows) — backs the
# `karn doctor` detection probe, replacing the Unix-only `which`-shell (v0.46).
which = "7"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1"

[profile.release]
lto = "thin"
