[workspace]
members = [
    "bynk-syntax",
    "bynk-render",
    "bynk-check",
    "bynk-emit",
    "bynk-ide",
    "bynkc",
    "bynk",
    "bynk-fmt",
    "bynk-grammar",
    "bynk-lsp",
    "mdbook-bynk-grammar",
    "mdbook-bynk-highlight",
    "mdbook-bynk-visuals",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.65.0"
# Minimum supported Rust version. Floored by edition 2024 (needs >= 1.85). The
# CI `msrv` leg builds the workspace on exactly this toolchain, so the claim is
# verified rather than asserted — if it fails, raise this (don't lower the leg).
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/accuser/bynk"
homepage = "https://github.com/accuser/bynk"

[workspace.dependencies]
# version is required alongside path so the published crates carry a crates.io
# dependency requirement; path is used for in-workspace builds.
bynk-syntax = { path = "bynk-syntax", version = "0.65.0" }
bynk-render = { path = "bynk-render", version = "0.65.0" }
bynk-check = { path = "bynk-check", version = "0.65.0" }
bynk-emit = { path = "bynk-emit", version = "0.65.0" }
bynk-ide = { path = "bynk-ide", version = "0.65.0" }
bynkc = { path = "bynkc", version = "0.65.0" }
bynk-fmt = { path = "bynk-fmt", version = "0.65.0" }
bynk-grammar = { path = "bynk-grammar", version = "0.65.0" }
ariadne = "0.5"
clap = { version = "4", features = ["derive"] }
logos = "0.16"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
# Portable executable lookup (handles PATHEXT/`where` on Windows) — backs the
# `bynk doctor` detection probe, replacing the Unix-only `which`-shell (v0.46).
which = "7"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1"

[profile.release]
lto = "thin"
