[workspace]
members = [
    "bynk-syntax",
    "bynk-render",
    "bynk-check",
    "bynk-emit",
    "bynk-strip",
    "bynk-wasm",
    "bynk-ide",
    "bynkc",
    "bynk",
    "bynk-fmt",
    "bynk-grammar",
    "bynk-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.112.0"
# Minimum supported Rust version. Edition 2024 floors it at 1.85, but `oxc`
# (the TS→JS stripper behind `bynk-strip`, in-browser track slice 1) requires
# rustc 1.94, so the effective floor rose to match it — set to 1.95 (the pinned
# `rust-toolchain.toml`), the toolchain the full suite is verified on. The CI
# `msrv` leg builds the workspace on exactly this toolchain, so the claim is
# verified rather than asserted — if it fails, raise this (don't lower the leg).
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/accuser/bynk"
homepage = "https://github.com/accuser/bynk"

[workspace.dependencies]
# version is required alongside path so the published crates carry a crates.io
# dependency requirement; path is used for in-workspace builds.
bynk-syntax = { path = "bynk-syntax", version = "0.112.0" }
bynk-render = { path = "bynk-render", version = "0.112.0" }
bynk-check = { path = "bynk-check", version = "0.112.0" }
bynk-emit = { path = "bynk-emit", version = "0.112.0" }
bynk-strip = { path = "bynk-strip", version = "0.112.0" }
bynk-ide = { path = "bynk-ide", version = "0.112.0" }
bynkc = { path = "bynkc", version = "0.112.0" }
bynk-fmt = { path = "bynk-fmt", version = "0.112.0" }
bynk-grammar = { path = "bynk-grammar", version = "0.112.0" }
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
logos = "0.16"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
# Portable executable lookup (handles PATHEXT/`where` on Windows) — backs the
# `bynk doctor` detection probe, replacing the Unix-only `which`-shell (v0.46).
which = "8"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1"

[profile.release]
lto = "thin"
