[package]
name = "bynk-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Formatter for the Bynk DSL (used by bynkc-lsp)."
keywords = ["compiler", "dsl", "formatter", "language"]
categories = ["development-tools", "compilers"]

[lib]
path = "src/lib.rs"

[dependencies]
# The formatter is an AST-walk over the syntax foundation — it links the
# `bynk-syntax` leaf only, never the compiler (slice 2 of crate-decomposition).
bynk-syntax.workspace = true

[dev-dependencies]
