[package]
name = "bynk-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "bynkc-lsp — the Language Server for the Bynk DSL."
# v0.29 (ADR 0058): the legend drift guard reads ../vscode-bynk/package.json,
# which is not part of this crate's package — keep it out of the published
# tarball so a standalone `cargo test` on the crates.io release can't fail on
# the missing sibling. It still runs in-repo via `cargo test --workspace`.
exclude = ["tests/legend_drift.rs"]

[[bin]]
name = "bynkc-lsp"
path = "src/main.rs"

[dependencies]
bynkc.workspace = true
bynk-fmt.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
