[package]
name = "bynk-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "bynkc-lsp — the Language Server for the Bynk DSL."
keywords = ["compiler", "dsl", "lsp", "language-server", "language"]
categories = ["development-tools", "compilers"]
# v0.29 (ADR 0058): the legend drift guard reads ../vscode-bynk/package.json,
# which is not part of this crate's package — keep it out of the published
# tarball so a standalone `cargo test` on the crates.io release can't fail on
# the missing sibling. It still runs in-repo via `cargo test --workspace`.
exclude = ["tests/legend_drift.rs"]

[[bin]]
name = "bynkc-lsp"
path = "src/main.rs"

[dependencies]
# Slice 5: the language server links the analysis libraries directly, not the
# whole `bynkc` compiler crate. `bynk-ide` is the diagnose/project-analysis
# surface; `bynk-check` the captured tables + checker types; `bynk-syntax` the
# spans/AST/lexer/parser; `bynk-fmt` formatting.
bynk-ide.workspace = true
bynk-check.workspace = true
bynk-syntax.workspace = true
bynk-fmt.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
