[package]
name = "bynk-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bynk's shared diagnostic-rendering layer: ariadne human output and the short/json forms over bynk-syntax::CompileError. The presentation layer both CLI front-ends adopt so they render identically."
keywords = ["compiler", "dsl", "diagnostics", "language"]
categories = ["compilers", "command-line-interface"]

[lib]
path = "src/lib.rs"

[dependencies]
# The structured diagnostic this layer renders — and ONLY this. `bynk-render`
# must never depend on `bynk-emit`/`bynk-check`: the AttributedError →
# CompileError flattening stays above render (ADR 0100; no render→emit edge).
bynk-syntax.workspace = true
ariadne.workspace = true
