[package]
name = "bynk-strip"
description = "Strip-only TypeScript→JavaScript for Bynk's first-class JS artefact (the in-browser track). Erases TypeScript type syntax via oxc, preserving runtime semantics and all value imports; the emitter's strip-only invariant (ADR 0136) guarantees every input is erasable."
keywords = ["compiler", "dsl", "typescript", "javascript", "language"]
categories = ["compilers", "development-tools"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# The emitter's output types (`ProjectOutput`/`CompiledFile`) — `strip_project_to_js`
# rewrites a compiled project to a JS artefact. No cycle: `bynk-emit` does not depend
# on `bynk-strip`, so the LSP (via `bynk-ide` → `bynk-emit`) never pulls oxc.
bynk-emit.workspace = true
# A pure-Rust TS parser + type-erasing transform + codegen — no Node/tsc in the
# loop and wasm-safe (the wasm toolchain slice compiles this path to wasm32).
oxc = { version = "0.137", features = ["semantic", "transformer", "codegen"] }
