[package]
name = "bynk-wasm"
description = "The Bynk compiler as a wasm module for the in-browser REPL/playground: a single `bynk_compile` entry that compiles an in-memory Bynk source to a runnable JavaScript module graph + diagnostics, with no filesystem and no tsc. Not published — it is the playground's build artefact."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
# A build artefact for the playground, not a library others depend on — so it is
# never published to crates.io (no release-bootstrap/trusted-publishing needed).
publish = false

[lib]
# `cdylib` is the wasm output; `rlib` lets the native test build + tooling link the
# same logic so the compile path is verified without a browser (slice 3 verifies by
# native tests + a wasm32 build-gate; the browser harness lands with the REPL shell).
crate-type = ["cdylib", "rlib"]

[dependencies]
# The compile pipeline + its in-memory entry (compile_in_memory) and the TS→JS
# strip (strip_project_to_js). bynk-check supplies the Platform axis.
bynk-emit.workspace = true
bynk-strip.workspace = true
bynk-check.workspace = true
bynk-syntax.workspace = true
serde = { workspace = true }
serde_json.workspace = true

# wasm-bindgen is only needed for the wasm32 entry point; native builds (tests,
# clippy, the host toolchain) never pull it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
