[package]
name = "bynkc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The Bynk compiler — a typed function-then-context DSL that compiles to TypeScript."
keywords = ["compiler", "dsl", "typescript", "language"]
categories = ["compilers"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "bynkc"
path = "src/main.rs"

[dependencies]
# The syntax foundation (lexer, parser, ast, span, keywords, error, diagnostics)
# — extracted to its own leaf crate (crate-decomposition slice 1).
bynk-syntax.workspace = true
ariadne.workspace = true
clap.workspace = true
regex.workspace = true
# Serialises the `bynkc test --format json` document (test_json.rs).
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
regex.workspace = true
# The grammar reference (tests/grammar_reference.rs) is rendered by this crate.
bynk-grammar.workspace = true
