[package]
name = "karn-grammar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared grammar definitions for the Karn DSL."

[lib]
path = "src/lib.rs"

[dependencies]
# `preserve_order` keeps the grammar rules in source order so the rendered
# appendix matches the committed `docs/src/reference/grammar.md` byte for byte.
serde_json = { workspace = true, features = ["preserve_order"] }
