[package]
name = "karn-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "karnc-lsp"
path = "src/main.rs"

[dependencies]
karnc = { path = "../karnc" }
karn-fmt = { path = "../karn-fmt" }
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
