[package]
name = "karn-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "karnc-lsp — the Language Server for the Karn DSL."

[[bin]]
name = "karnc-lsp"
path = "src/main.rs"

[dependencies]
karnc.workspace = true
karn-fmt.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
