[package]
name = "karn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The Karn driver — a thin orchestrator over the karnc compiler and the Node toolchain (cargo is to rustc as karn is to karnc)."
keywords = ["karn", "cli", "toolchain", "driver"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "karn"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# The driver reads the single-sourced Node floor (`NODE_MAJOR_FLOOR`) and the
# project-rooting helpers from the compiler; it does not link the pipeline.
karnc.workspace = true
clap.workspace = true
which.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
