[package]
name = "mdbook-bynk-grammar"
version.workspace = true
edition.workspace = true
license.workspace = true
# Internal docs-build tooling — never published to crates.io.
publish = false

[[bin]]
name = "mdbook-bynk-grammar"
path = "src/main.rs"

[dependencies]
bynk-grammar.workspace = true
serde_json.workspace = true
