[package]
name = "mdbook-karn-grammar"
version.workspace = true
edition.workspace = true
# Internal docs-build tooling — never published to crates.io.
publish = false

[[bin]]
name = "mdbook-karn-grammar"
path = "src/main.rs"

[dependencies]
karn-grammar.workspace = true
serde_json.workspace = true
